--- a/doc/user_stories/COD121.md
+++ b/doc/user_stories/COD121.md
@@ -9,33 +9,11 @@
 As a request, the website can not be used whilst not being approved by an already approved user, to limit its userbase and make the website a bit more secure. This means that a new user should be able to log in, but not capable of doing anything until another user, which is already approved, accepts this new user. Which then adds the user role to the new user, so that they can use the website. On top of that adds the approver to the new user, so that in case of a wrong user being added. It can be discovered what happend. So in short: Domain user: username, join date, role, approver
 
 
-<!-- ## Steps
-precondtion: {precondition}
-1. {step 1}
-2. {step 2}
-    1. {step 2.1}
-    2. {step 2.2}
-3. {step 3}
-...
-
-> voorbeeld:
-> 
-> Precondition: Logged in, authorized, within project.
-> 1. Programmer selects terminal
-> 2. Programmer enters text
-> 3. Programmer sends run command
-> 4. System checks text for illegal statements
->     1. System returns error for found illegal statements
->     2. System skips execute  
-> 5. System executes text
-> 6. Programmer receives result
-> 	  1. Feedback from Linux terminal
-> 	  2. Error for illegal statements
-> 	  3. Error for runtime exception
-> 
-> * Any time, the connection with back-end is lost:
-> 	  1. System display error message
-> 	  2. System try to reload connection -->
+## Steps
+> precondtion: User is logged in (as administrator) and the user is in the application settings page
+> 1. Admin presses a button to allow / deny a user to the application (can be new account & existing account)
+> 2. System updates allowences for that account
+> 3. System reloads page
 
 
 ## *COMPLEMENTING* Images
