--- a/doc/user_stories/COD170.md
+++ b/doc/user_stories/COD170.md
@@ -8,6 +8,7 @@
 
 ## Beschrijving 
 At the current moment its necessary to press save to save the project. As if you leave the website now, without pressing save, the project will not be saved.
+This will be solved by adding a automatic scheduled function that saves the code every 10 minutes, if a file hasn't been interacted with for 12 minutes it's closed. 
 
 
 <!-- ## Steps
