--- a/doc/user_stories/COD170.md
+++ b/doc/user_stories/COD170.md
@@ -11,53 +11,24 @@ At the current moment its necessary to press save to save the project. As if you
 This will be solved by adding a automatic scheduled function that saves the code every 10 minutes, if a file hasn't been interacted with for 12 minutes it's closed. 
 
 
-<!-- ## Steps
-precondtion: {precondition}
-1. {step 1}
-2. {step 2}
-    1. {step 2.1}
-    2. {step 2.2}
-3. {step 3}
-...
+## Steps
+> precondtion: User is logged in, User is allowed in a project, User is in the page of the allowed project
+> 1. Programmer makes a change in the project
+> 2. System Saves Project
+> 3. System reloads project page
 
-> voorbeeld:
-> 
-> Precondition: Logged in, authorized, within project.
-> 1. Programmer selects terminal
-> 2. Programmer enters text
-> 3. Programmer sends run command
-> 4. System checks text for illegal statements
->     1. System returns error for found illegal statements
->     2. System skips execute  
-> 5. System executes text
-> 6. Programmer receives result
-> 	  1. Feedback from Linux terminal
-> 	  2. Error for illegal statements
-> 	  3. Error for runtime exception
-> 
-> * Any time, the connection with back-end is lost:
-> 	  1. System display error message
-> 	  2. System try to reload connection
- -->
 
 ## *COMPLEMENTING* images / references
-<!-- ![link to {image}]({link})
+![link to image of wireframe of page where project is saved](https://github.com/webbasedcode/documentation/blob/main/doc/wireframes/projectpage.png)
 
-{explanation by/for image}
+image of wireframe of page where project is saved
 
-> voorbeeld:  
-> ![test image](https://www.lslegal.nl/wp-content/uploads/2017/03/Test-image-1.jpg)
-> 
-> this is a test image to show how to implement a image into usecase descriptions
-> 
-> 
-> voorbeeld2:
-> [link to learning story](...)
-> 
-> ...
+![link to Sequence Diagram of saving code](https://github.com/webbasedcode/documentation/blob/main/doc/model/Sequence_diagram/SaveFiles.png)
+
+Image of Sequence Diagram of saving code
 
 
-## *EXTRA* Code
+<!-- ## *EXTRA* Code
 ```{coding language}
 {code} 
 ```
