--- a/doc/user_stories/COD171.md
+++ b/doc/user_stories/COD171.md
@@ -7,16 +7,27 @@
 
 
 ## Beschrijving 
-At the moment the redis cache will not close unless the server is shut down. This will cause a memory overflow. So to avoid this, the redis cache must be shut down after a certain amount of time. In which its unused.
+As a programmer I want to have a fast response service to be able to work together with other programmers, which means that the redis for a file should be closed after a while. In this its prefered to include a file autosaver so that unsaved progress wont be lost due to the closed redis.
 
-<!-- ## Steps
-precondtion: {precondition}
-1. {step 1}
-2. {step 2}
-    1. {step 2.1}
-    2. {step 2.2}
-3. {step 3}
-...
+ ## Steps
+1. Programmer opens a project
+2. Programmer opens a file
+3. System will search for opened file in database
+    3.1. System returns error if file not found
+    3.2. System sets an epoch time for when file is opened
+Optional 4: Programmer writes in file
+    4.1. System will update epoch to latest update time
+5. (Timer: 10 minutes) System will check each file for last change epoch with current epoch
+    5.1. System sends files that havent been updated in the past 12 minutes to close.
+    5.2. System sends files that have been updated in the last 12 minutes to save.
+6. System saves files
+7. System closes files
+8. System logs how many files have been closed, saved and have had errors in console.
+
+> * Any time, the connection with redis is lost
+> 	  1. System will show this in the logged error
+> 	  2. System will continue and retry in 10 minutes
+<!--
 
 > voorbeeld:
 > 
